--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6586,5 +6586,14 @@ button.close {
 .footer {margin-top: 40px }
 .footer p, .footer img { display: block; float: none; margin: 10px auto; text-align: center; }
 }
+.loader {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url('../img/page-loader.gif') 50% 50% no-repeat rgb(249,249,249);
+}
 
 
